# hpc-data-analysis

./: .gitignore  README.md  hpc_stats.py  hpc_stats_visualisation.html  hpc_stats_visualisation.ipynb  job_level_metrics.py  pyproject.toml
dev_scripts/: 2026-01-15_claude_code_logs.txt  2026-01-15_query_job_states_output.txt  2026-01-20_query_tres_output.txt  debug_memory.py  dump_schema.py  faculty_stats.py  output_cpu_mem_diagnostics.txt  output_dump_schema.txt  output_query_job_structure.txt  output_query_table_defs.txt  output_query_tres.txt  output_tres_usage_vs_rusage.txt  query_cpu_mem_diagnostics.py  query_cpu_time.py  query_job_states.py  query_job_structure.py  query_step_diagnostics.py  query_table_defs.py  query_tres.py  query_tres_usage_vs_rusage.py
notebooks/: visualisation.html  visualisation.ipynb
src/hpc_data_analysis/: aggregate_stats.py  job_stats.py  slurm_utils.py
